<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/ordenCardViewDetalleOrd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="5dp"
        android:layout_margin="8dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/purple_200">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewDetalleOrd"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:padding="25sp"
                app:srcCompat="@drawable/iconorders"
                tools:srcCompat="@drawable/iconorders" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView177"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:padding="5sp"
                    android:text="@string/Item_DetOrdNombProd"
                    android:textAlignment="textStart"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvItemDetOrdNombreProd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5sp"
                    android:text="TextView"
                    android:textAlignment="viewStart"
                    android:textColor="#AC82F6"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView188"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:padding="5sp"
                    android:text="@string/Item_DetOrdCantid"
                    android:textAlignment="viewStart"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvItemDetOrdCant"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5sp"
                    android:text="TextView"
                    android:textColor="#AC82F6"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView148"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:padding="5sp"
                    android:text="@string/Item_DetOrdPrec"
                    android:textAlignment="viewStart"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvItemDetOrdPrec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5sp"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/textView100"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:padding="5sp"
                    android:text="@string/Item_DetOrdSubTot"
                    android:textAlignment="viewStart"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvItemDetOrdSubTotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5sp"
                    android:text="TextView" />
            </LinearLayout>
        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>